* Fix   - When adding "signature required" to some packages, prices were not updating.
* Add   - DHL Schedule Pickup link within order notes.
* Fix   - UI fix for input validation for package dimensions and weights.
* Fix   - Correct validation for UPS fields in Carrier Account connect form.
* Tweak - Add message to explain automated tax requires tax-exclusive product pricing.

= 1.25.2 - 2020-11-10 =
* Tweak - Add ZIP code validation to UPS(beta) signup form.
* Fix   - Issue with printing labels in some iOS devices through Safari.
* Fix   - Prevents warning when using PHP 5.5 or lesser
* Add   - Add new API end point to retrieve carrier registration requirements.
* Add   - Add composer command to run PHPUnit.
* Tweak - Update readme with DHL information.

= 1.25.1 - 2020-10-28 =
* Tweak - DHL refund days copy adjustment
* Tweak - Stop using deprecated Jetpack method is_development_mode().
* Fix   - Update carrier name in tracking notification email.
* Add   - Add pre-commit and pre-push git hooks for linting and unit tests.
* Add   - Disable refunds for USPS letters.

= 1.25.0 - 2020-10-13 =
* Fix   - UPS connect redirect prompt
* Fix   - Allow UPS label purchase without payment method
* Fix   - PHP implode arguments order
* Fix   - Validate insurance value as both string and number
* Tweak - Adjusted messaging on label pointers
* Tweak - Update carrier logo
* Tweak - Plugin rename
* Add   - Link to print the customs form for all shipments that need it
* Tweak - Add new icons and banners with new plugin name

= 1.24.3 - 2020-09-16 =
* Fix   - Asset paths incompatible with some hosts.
* Fix   - Select all posts checkbox not working.
* Fix   - Use of deprecated jQuery.load.
* Tweak - Updating carrier logo and tracking links

= 1.24.2 - 2020-09-03 =
* Fix   - Optional preloading for wc-admin install compatibility
* Fix   - Remove duplicate rate errors
* Fix   - Compatibility with WooCommerce order page install prompt